--- a/src/assets/i18n/hindi.json
+++ b/src/assets/i18n/hindi.json
@@ -1,5 +1,5 @@
-
 {
+    
     "Lorem ipsum dolor sitame consectetur adipis." : "विज्ञापन के बारे में विज्ञापन",
     "Duis aute irure dolor in reprehenderit voluptate velitesse cillum dolore eu fugiat nulla pariatur." : "दुश्मनों को एक बार फिर से छूने की कोशिश की गई थी, तो वे एक दूसरे से मिलने के लिए तैयार हो गए थे।",
     "© 2017 Kleveron. A venture of":"© 2017 क्लेवरन का एक उद्यम",
@@ -8,31 +8,44 @@
     "Forgot Password": "पासवर्ड भूल गए",
     "Password" : "पासवर्ड",
     "Need An Account?" : "साइन इन करें",
-    "Company Name" : "कंपनी का नाम",
+    "New Company" : "कंपनी का नाम",
     "Sign In" : "साइन इन करें",
     "Username":"उपयोगकर्ता नाम",
     "Twitter Handle": "ट्विटर हैंडल",
     "Surat" : "सूरत",
     "Gujarat" :"गुजरात",
     "Organisation" : "संगठन",
-    "Linked Address" : "लिंक पता",
+    "Linkedin address" : "लिंक पता",
     "Company Head Office Address" : "कंपनी के प्रमुख कार्यालय का पता",
     "Consulting Group LLP. All Rights Reserved." : "परामर्श समूह एलएलपी सर्वाधिकार सुरक्षित",
     "Main" : "मुख्य",
+    "Search":"खोज",
      "Personal" : "निजी",
      "Organization" : "संगठन",
-     "Facebook Address" : "फेसबुक का पता",
-     "Google Plus Page" : "Google प्लस पृष्ठ",
+     "Facebook address" : "फेसबुक का पता",
+     "Google Plus ID" : "Google प्लस पृष्ठ",
      "Appearance" : "दिखावट",
      "Apps and Plugins" : "ऐप्स और प्लगइन्स",
+     "Name Of CEO/MD":"सीईओ / एमडी के नाम",
+     "Country":"देश",
+     "State":"राज्य",
+     "Number of employees":"कर्मचारियों की संख्या",
+     "Enter Password":"पास वर्ड दर्ज करें",
+     "Select Text":"पाठ चुनें",
+     "Select Option":"विकल्प चुनें",
+     "Enter Something":"कुछ दर्ज करें",
+     "City":"शहर",
      "On Boarding" : "बोर्डिंग पर",
+     "Add":"जोड़ना",
      "John Smith" : "जॉन स्मिथ",
      "View Profile" : "प्रोफाइल देखिये",
+     "Temp Name":"टेम्पलेट नाम",
      "Logout" : "लोग आउट",
     "English" : "अंग्रेज़ी",
     "Hindi" : "हिंदी",
     "Hiren" : "हिरेन",
     "Ahmet" : "अहमत",
+    "Input Forms":"इनपुट फ़ॉर्म",
     "Lorem ipsum sit dolor amet consilium. Saat önce" : "हम डिजाइन करने के लिए तैयार हैं सात एक बार",
     "View All" : "सभी को देखें",
     "OnBoarding" : "बोर्डिंग पर",
@@ -68,6 +81,27 @@
     "Manage Accounts" : "खातों का प्रबंधन",
     "Other Information" : "अन्य सूचना",
     "Setting" : "सेटिंग",
-    "Hiren(2)":"हिरेन(2)"
+    "Hiren(2)":"हिरेन(2)",
+    "Dashboard":"डैशबोर्ड",
+    "Job Postings":"नौकरी पोस्टिंग",
+    "Admin":"व्यवस्थापक",
+    "My Team":"मेरी टीम",
+    "Projects":"परियोजनाओं",
+    "Positions":"पदों",
+    "Time & Expense":"समय और व्यय",
+    "Documents":"दस्तावेजों",
+    "Settings":"सेटिंग्स",
+
+    "Input(Text)":"इनपुट(टेक्स्ट)",
+    "Text Area":"टेक्स्ट एरिया",
+    "Select":"चुनते हैं", 
+    "Text With Label":"लेबल के साथ पाठ",
+    "Date Picker":"तारीख कुदाल",
+    "Time Picker":"पहर कुदाल",
+    "Checkbox":"चेकबॉक्स",
+    "Radio Button":"रेडियो बटन",
+    "Switch":"स्विच",
+    "Select Options":"विकल्प चुनो",
+    "Select Control":"चुनते हैं नियंत्रण"
 
 }
